Fix Iframe too short
temporary solution by hardcoding minHeight

--- a/client/src/components/VideoCall.css
+++ b/client/src/components/VideoCall.css
@@ -9,7 +9,7 @@ img {
 .video-frame {
     border-color: black;
     border-radius: 1em;
-    min-height: 15%;
+    min-height: 700%;
     min-width: 20%;
     width: 100%;
     height: 100%;
